# desktop-laser-marking-system

./: .gitignore  How to setup with Cmake.txt  README.md  generate-windows.x64.bat  generate.bat  generate.cmd  thirdparty.txt
Assets/: icons.qrc
Assets/Icons/: icons.qrc
Assets/Themes/ACAD/css/: button.css  checkbox.css  combobox.css  dateedit.css  dialog.css  groupbox.css  label.css  lineedit.css  menu.css  menubar.css  messagebox.css  plaintextedit.css  spinbox.css  statusbar.css  tableview.css  tabwidget.css  toolbar.css  widget.css  window.css
Assets/Themes/Default/css/: messagebox.css
Assets/Themes/Default/data/: Color.json  Palettes.json
Default Files/: LMS.db
LMS/: CMakeLists.txt  HxAddParamsDialog.cpp  HxAddParamsDialog.h  HxAddProfileDialog.cpp  HxAddProfileDialog.h  HxBarcode.cpp  HxBarcode.h  HxBlockInfo.cpp  HxBlockInfo.h  HxControlWindow.cpp  HxControlWindow.h  HxControlWindow.ui  HxConvert.cpp  HxConvert.h  HxDataTable.h  HxDebugger.cpp  HxDebugger.h  HxDesign.cpp  HxDesign.h  HxDesignWindow.cpp  HxDesignWindow.h  HxDesignWindow.ui  HxException.cpp  HxException.h  HxFileManager.cpp  HxFileManager.h  HxIVProgram.cpp  HxLOT.cpp  HxLOT.h  HxLOTPropertyDialog.cpp  HxLOTPropertyDialog.h  HxLOTPropertyDialog.ui  HxLOTWindow.cpp  HxLOTWindow.h  HxLOTWindow.ui  HxLaser.cpp  HxLaser.h  HxLicense.cpp  HxLicense.h  HxLoginDialog.cpp  (+62 more)
Scripts/: 25.1.0.iss  Master.iss
Sources/: CMakeLists.txt  HxActuator.cpp  HxActuator.h  HxAddParamDialog.cpp  HxAddParamDialog.h  HxAddParamDialog.ui  HxAddParamsDialog.ui  HxAddUserDialog.cpp  HxAddUserDialog.h  HxAddUserDialog.ui  HxBarcode.cpp  HxBarcode.h  HxBarcodeReader.cpp  HxBarcodeReader.h  HxBarcodeSaver.cpp  HxBarcodeSaver.h  HxBlock.cpp  HxBlock.h  HxControlWindow.cpp  HxControlWindow.h  HxControlWindow.ui  HxConvert.cpp  HxConvert.h  HxDataGenerator.cpp  HxDataGenerator.h  HxDataTable.cpp  HxDataTable.h  HxDatabase.cpp  HxDatabase.h  HxDefines.h  HxDesign.cpp  HxDesign.h  HxDesignWindow.cpp  HxDesignWindow.h  HxDesignWindow.ui  HxEvent.cpp  HxEvent.h  HxException.cpp  HxException.h  HxFileManager.cpp  (+211 more)
