cmake_minimum_required(VERSION 3.10)
project(LMS)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/O2 /Zi /DNDEBUG")
set(CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO "/DEBUG")
set(CMAKE_BUILD_TYPE "RelWithDebInfo" CACHE STRING "Choose the type of build." FORCE)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

file(GLOB HEADER_FILES *.h)
file(GLOB SOURCE_FILES *.cpp)
file(GLOB UI_FILES *.ui)
file(GLOB RESOURCE_FILES ../Assets/Icons/*.qrc)
file(GLOB RESOURCE_ICONS ../Assets/Icons/*.rc)

source_group("Forms" FILES ${UI_FILES})
source_group("Resources" FILES ${RESOURCE_FILES})
source_group("Resources" FILES ${RESOURCE_ICONS})

foreach(CONFIG_TYPE ${CMAKE_CONFIGURATION_TYPES})
    string(TOUPPER ${CONFIG_TYPE} CONFIG_TYPE_UPPER)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${CONFIG_TYPE_UPPER} $ENV{BUILD_DIR})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${CONFIG_TYPE_UPPER} $ENV{BUILD_DIR})
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${CONFIG_TYPE_UPPER} $ENV{BUILD_DIR})
endforeach()

# set(APP_TYPE WIN32)
set(Qt$ENV{QT_VERSION_MAJOR}_DIR $ENV{QT_DIR}/lib/cmake/Qt$ENV{QT_VERSION_MAJOR})
add_executable(${PROJECT_NAME} ${APP_TYPE} ${SOURCE_FILES} ${HEADER_FILES} ${UI_FILES} ${RESOURCE_FILES} ${RESOURCE_ICONS})

find_package(Qt$ENV{QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Widgets Gui Network SerialPort Sql Concurrent)

target_link_libraries(${PROJECT_NAME} PRIVATE
Qt$ENV{QT_VERSION_MAJOR}::Core
Qt$ENV{QT_VERSION_MAJOR}::Widgets
Qt$ENV{QT_VERSION_MAJOR}::Network
Qt$ENV{QT_VERSION_MAJOR}::SerialPort
Qt$ENV{QT_VERSION_MAJOR}::Sql
Qt$ENV{QT_VERSION_MAJOR}::Concurrent
)

if(CMAKE_SYSTEM_NAME MATCHES "Windows")
    file(COPY $ENV{QT_DIR}/bin/Qt$ENV{QT_VERSION_MAJOR}Core.dll DESTINATION $ENV{BUILD_DIR})
    file(COPY $ENV{QT_DIR}/bin/Qt$ENV{QT_VERSION_MAJOR}Widgets.dll DESTINATION $ENV{BUILD_DIR})
    file(COPY $ENV{QT_DIR}/bin/Qt$ENV{QT_VERSION_MAJOR}SerialPort.dll DESTINATION $ENV{BUILD_DIR})
    file(COPY $ENV{QT_DIR}/bin/Qt$ENV{QT_VERSION_MAJOR}Network.dll DESTINATION $ENV{BUILD_DIR})
    file(COPY $ENV{QT_DIR}/bin/Qt$ENV{QT_VERSION_MAJOR}Gui.dll DESTINATION $ENV{BUILD_DIR})
    file(COPY $ENV{QT_DIR}/bin/Qt$ENV{QT_VERSION_MAJOR}Sql.dll DESTINATION $ENV{BUILD_DIR})
    file(COPY $ENV{QT_DIR}/bin/Qt$ENV{QT_VERSION_MAJOR}Concurrent.dll DESTINATION $ENV{BUILD_DIR})
    file(COPY $ENV{QT_DIR}/plugins/platforms DESTINATION $ENV{BUILD_DIR})
    file(COPY $ENV{QT_DIR}/plugins/styles DESTINATION $ENV{BUILD_DIR})
    file(COPY $ENV{QT_DIR}/plugins/imageformats DESTINATION $ENV{BUILD_DIR})
    file(COPY $ENV{QT_DIR}/plugins/sqldrivers DESTINATION $ENV{BUILD_DIR})
    file(COPY "../Default Files" DESTINATION $ENV{BUILD_DIR})
    file(COPY "../Assets/Themes" DESTINATION $ENV{BUILD_DIR})
endif() 



